--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@
             }
             .container {
                 border: none;
-                width: 100%;
+                width: fit-content;
+                background-color: white;
+            }
+            input{
+                background-color: white;
             }
             body {
                 border: none;
@@ -108,10 +112,13 @@
                 margin-top: 2%;
             }
             .makulitka{
-                width: fit-content;
+                width: 90%;
+                margin-left: 25mm;
+                margin-right: 25mm;
+                background-color: white;
             }
             header{
-                margin-left: -25px;
+                margin-left: -10px;
             }
         }
 
@@ -132,7 +139,7 @@
         </header>
         <h2>CO-MAKER STATEMENT</h2>
     
-        <div class="pass">
+        <div class="pass" style="margin-left: 15mm; margin-right: 15mm;">
             <p style="text-align: justify; font-style: normal; text-indent: 50px;">
                 We, <input type="text" class="required"> / <input type="text" class="required">, 
                 of legal age, Filipino, and a resident of <input type="text" class="required" style="width: 85%;"> and <input type="text" class="required" style="width: 85%;">, 
@@ -177,7 +184,7 @@
         </header>
         <h2>CO-MAKER STATEMENT</h2>
         
-        <div class="pass">
+        <div class="pass" style="margin-left: 15mm; margin-right: 15mm;">
             <p style="text-align: justify; font-style: normal; text-indent: 50px;">
                 I, <input type="text" class="required">, 
                 of legal age, Filipino, and a resident of <input type="text" class="required" style="width: 75%;"> and, 
@@ -186,11 +193,11 @@
                 <input type="text" class="required" style="width: 48%"> (Php <input type="text" class="required" style="width: 10%">).
             </p>
             <p style="text-align: justify; font-style: normal; text-indent: 50px;">
-                That being the co-makers, we hereby bind ourselves to assume the obligation in case the borrower will not pay or fails to pay on time his/her promissory note to BMCI. 
-                We further assure to assume <strong>FULL RESPONSIBILITY</strong> in paying full moment in case the borrower will transfer residence or nowhere to find.
+                That being the co-makers, I hereby bind ourselves to assume the obligation in case the borrower will not pay or fails to pay on time his/her promissory note to BMCI. 
+                I further assure to assume <strong>FULL RESPONSIBILITY</strong> in paying full moment in case the borrower will transfer residence or nowhere to find.
             </p>
             <p style="text-align: justify; font-style: normal; text-indent: 50px;"> 
-                In witness whereof, we have hereunto fixed our signatures this <input type="text" class="required" style="width: 5%;">
+                In witness whereof, I have hereunto fixed our signatures this <input type="text" class="required" style="width: 5%;">
                 day of <input type="text" class="required" style="width: 10%;"> 20<input type="text" class="required" style="width: 5%;">
                 at <input type="text" class="required" style="width: 30%;">, Taguig City.
             </p>
