--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="download-removebg-preview copy.png">
-    <title>Social Case Study Report</title>
+    <title>Co-Maker Statement</title>
     <style>
         body { 
             font-family: Arial, sans-serif; 
@@ -14,7 +14,6 @@
             max-width: 100%;
             background-color: #ffffff;
         }
-
         h2 { 
             text-align: center; 
             margin-bottom: -15px;
@@ -142,9 +141,9 @@
     
         <div class="pass" style="margin-left: 15mm; margin-right: 15mm;">
             <p style="text-align: justify; font-style: normal; text-indent: 50px;">
-                We, <input type="text" class="required"> / <input type="text" class="required">, 
+                We, <input type="text" class="required" style="width: 65%;"> / <input type="text" class="required" style="width: 65%;">, 
                 of legal age, Filipino, and a resident of <input type="text" class="required" style="width: 85%;"> and <input type="text" class="required" style="width: 85%;">, 
-                respectively, do hereby agree to be co-makers of <input type="text" class="required"> for the Promissory Note granted by 
+                respectively, do hereby agree to be co-makers of patient<input type="text" class="required" style="width: 50%;"> for the Promissory Note granted by 
                 <strong>Bicutan Medical Center, Inc. (BMCI)</strong>, New Lower Bicutan, Taguig City in amount of
                 <input type="text" class="required" style="width: 48%"> (Php <input type="text" class="required" style="width: 10%">).
             </p>
@@ -187,9 +186,9 @@
         
         <div class="pass" style="margin-left: 15mm; margin-right: 15mm;">
             <p style="text-align: justify; font-style: normal; text-indent: 50px;">
-                I, <input type="text" class="required">, 
+                I, <input type="text" class="required" style="width: 50%;">, 
                 of legal age, Filipino, and a resident of <input type="text" class="required" style="width: 75%;"> and, 
-                respectively, do hereby agree to be co-makers of <input type="text" class="required"> for the Promissory Note granted by 
+                respectively, do hereby agree to be co-makers of patient<input type="text" class="required" style="width: 50%;"> for the Promissory Note granted by 
                 <strong>Bicutan Medical Center, Inc. (BMCI)</strong>, New Lower Bicutan, Taguig City in amount of
                 <input type="text" class="required" style="width: 48%"> (Php <input type="text" class="required" style="width: 10%">).
             </p>
