last na talaga to

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Co-Maker Statement</title>
     <style>
         body { 
-            font-family: Arial, sans-serif; 
+            font-family: sans-serif; 
             margin: 0;
             padding: 0;
             border: 1px solid black;
@@ -23,7 +23,7 @@
 
         p {
             font-size: 15px;
-            font-family: "Lora", "Merriweather", "Palatino Linotype", "Book Antiqua", serif;
+            font-family: serif;
             font-style: italic;
         }
 
@@ -124,6 +124,7 @@
 
         .required{
             text-align: center;
+            font-family: serif;
         }
         .makulitka{
             display: block;
